--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Counters app</title>
   <link rel="stylesheet" href="./bundle.css">
-  <link rel="icon" href="./favicon.png" type="image/png">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
   <body>
     <div id="root"></div>
